# dc-study-bot

./: .env.example  .gitignore  BEGINNER_GUIDE.md  README.md  main.py  pyproject.toml
src/study_bot/: __init__.py  bot.py  config.py  database.py
tests/: test_database.py
